src/OpenCvSharpExtern/video_tracking.h

CVAPI(ExceptionStatus) video_DISOpticalFlow_getVariationalRefinementDelta(cv::DISOpticalFlow* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getVariationalRefinementDelta(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setVariationalRefinementDelta(cv::DISOpticalFlow* obj, float value) { return cvTry([&] { obj->setVariationalRefinementDelta(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getVariationalRefinementGamma(cv::DISOpticalFlow* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getVariationalRefinementGamma(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setVariationalRefinementGamma(cv::DISOpticalFlow* obj, float value) { return cvTry([&] { obj->setVariationalRefinementGamma(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getVariationalRefinementEpsilon(cv::DISOpticalFlow* obj, float* returnValue) { return cvTry([&] { *returnValue = obj->getVariationalRefinementEpsilon(); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setVariationalRefinementEpsilon(cv::DISOpticalFlow* obj, float value) { return cvTry([&] { obj->setVariationalRefinementEpsilon(value); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getUseMeanNormalization(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getUseMeanNormalization() ? 1 : 0; }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setUseMeanNormalization(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setUseMeanNormalization(value != 0); }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_getUseSpatialPropagation(cv::DISOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getUseSpatialPropagation() ? 1 : 0; }); }
CVAPI(ExceptionStatus) video_DISOpticalFlow_setUseSpatialPropagation(cv::DISOpticalFlow* obj, int value) { return cvTry([&] { obj->setUseSpatialPropagation(value != 0); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_create(
    interop::Size winSize, int maxLevel, interop::TermCriteria criteria, int flags, double minEigThreshold,
    cv::Ptr<cv::SparsePyrLKOpticalFlow>** returnValue)
{
    return cvTry([&] {
        const auto p = cv::SparsePyrLKOpticalFlow::create(cpp(winSize), maxLevel, cpp(criteria), flags, minEigThreshold);
        *returnValue = clone(p);
    });
}
CVAPI(ExceptionStatus) video_Ptr_SparsePyrLKOpticalFlow_get(cv::Ptr<cv::SparsePyrLKOpticalFlow>* ptr, cv::SparsePyrLKOpticalFlow** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_SparsePyrLKOpticalFlow_delete(cv::Ptr<cv::SparsePyrLKOpticalFlow>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_getWinSize(cv::SparsePyrLKOpticalFlow* obj, interop::Size* returnValue) { return cvTry([&] { *returnValue = c(obj->getWinSize()); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_setWinSize(cv::SparsePyrLKOpticalFlow* obj, interop::Size value) { return cvTry([&] { obj->setWinSize(cpp(value)); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_getMaxLevel(cv::SparsePyrLKOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getMaxLevel(); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_setMaxLevel(cv::SparsePyrLKOpticalFlow* obj, int value) { return cvTry([&] { obj->setMaxLevel(value); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_getTermCriteria(cv::SparsePyrLKOpticalFlow* obj, interop::TermCriteria* returnValue) { return cvTry([&] { *returnValue = c(obj->getTermCriteria()); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_setTermCriteria(cv::SparsePyrLKOpticalFlow* obj, interop::TermCriteria value) { return cvTry([&] { auto v = cpp(value); obj->setTermCriteria(v); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_getFlags(cv::SparsePyrLKOpticalFlow* obj, int* returnValue) { return cvTry([&] { *returnValue = obj->getFlags(); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_setFlags(cv::SparsePyrLKOpticalFlow* obj, int value) { return cvTry([&] { obj->setFlags(value); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_getMinEigThreshold(cv::SparsePyrLKOpticalFlow* obj, double* returnValue) { return cvTry([&] { *returnValue = obj->getMinEigThreshold(); }); }
CVAPI(ExceptionStatus) video_SparsePyrLKOpticalFlow_setMinEigThreshold(cv::SparsePyrLKOpticalFlow* obj, double value) { return cvTry([&] { obj->setMinEigThreshold(value); }); }
CVAPI(ExceptionStatus) video_TrackerDaSiamRPN_create(video_TrackerDaSiamRPN_Params* p, cv::Ptr<cv::TrackerDaSiamRPN>** returnValue)
{
    return cvTry([&] {
        cv::TrackerDaSiamRPN::Params params;
        params.model = std::string(p->model);
        params.kernel_cls1 = std::string(p->kernel_cls1);
        params.kernel_r1 = std::string(p->kernel_r1);
        params.backend = p->backend;
        params.target = p->target;
        const auto obj = cv::TrackerDaSiamRPN::create(params);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) video_Ptr_TrackerDaSiamRPN_get(cv::Ptr<cv::TrackerDaSiamRPN>* ptr, cv::TrackerDaSiamRPN** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_TrackerDaSiamRPN_delete(cv::Ptr<cv::TrackerDaSiamRPN>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_TrackerNano_create(video_TrackerNano_Params* p, cv::Ptr<cv::TrackerNano>** returnValue)
{
    return cvTry([&] {
        cv::TrackerNano::Params params;
        params.backbone = std::string(p->backbone);
        params.neckhead = std::string(p->neckhead);
        params.backend = p->backend;
        params.target = p->target;
        const auto obj = cv::TrackerNano::create(params);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) video_Ptr_TrackerNano_get(cv::Ptr<cv::TrackerNano>* ptr, cv::TrackerNano** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_TrackerNano_delete(cv::Ptr<cv::TrackerNano>* ptr)
{ return cvTry([&] { delete ptr; }); }
CVAPI(ExceptionStatus) video_TrackerVit_create(video_TrackerVit_Params* p, cv::Ptr<cv::TrackerVit>** returnValue)
{
    return cvTry([&] {
        cv::TrackerVit::Params params;
        params.net = std::string(p->net);
        params.backend = p->backend;
        params.target = p->target;
        params.meanvalue = cpp(p->meanvalue);
        params.stdvalue = cpp(p->stdvalue);
        params.tracking_score_threshold = p->tracking_score_threshold;
        const auto obj = cv::TrackerVit::create(params);
        *returnValue = clone(obj);
    });
}
CVAPI(ExceptionStatus) video_Ptr_TrackerVit_get(cv::Ptr<cv::TrackerVit>* ptr, cv::TrackerVit** returnValue)
{ return cvTry([&] { *returnValue = ptr->get(); }); }
CVAPI(ExceptionStatus) video_Ptr_TrackerVit_delete(cv::Ptr<cv::TrackerVit>* ptr)
{ return cvTry([&] { delete ptr; }); }